@@ -1,12 +1,9 @@
 package com.hana.ddok.account.service;
 
 import com.hana.ddok.account.domain.Account;
-import com.hana.ddok.account.dto.AccountFindAllRes;
-import com.hana.ddok.account.dto.AccountSaveReq;
-import com.hana.ddok.account.dto.AccountSaveRes;
-import com.hana.ddok.account.dto.MoneyboxFindAllRes;
+import com.hana.ddok.account.dto.*;
+import com.hana.ddok.account.exception.MoneyboxNotFound;
 import com.hana.ddok.account.repository.AccountRepository;
-import com.hana.ddok.common.exception.EntityNotFoundException;
 import com.hana.ddok.products.domain.Products;
 import com.hana.ddok.products.exception.ProductsNotFound;
 import com.hana.ddok.products.repository.ProductsRepository;
@@ -17,7 +14,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.Map;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -28,8 +25,8 @@ public class AccountService {
     private final UsersRepository usersRepository;
 
     @Transactional
-    public AccountSaveRes accountSave(AccountSaveReq accountSaveReq) {
-        Users users = usersRepository.findById(1L).get();    // TODO : 시큐리티 적용 시 변경
+    public AccountSaveRes accountSave(AccountSaveReq accountSaveReq, String phoneNumber) {
+        Users users = usersRepository.findByPhoneNumber(phoneNumber);
         Products products = productsRepository.findById(accountSaveReq.productsId())
                 .orElseThrow(() -> new ProductsNotFound());
         Account account = accountRepository.save(accountSaveReq.toEntity(users, products));
@@ -37,26 +34,62 @@ public class AccountService {
     }
 
     @Transactional(readOnly = true)
-    public List<AccountFindAllRes> accountFindAll() {
-        Users users = usersRepository.findById(1L).get();    // TODO : 시큐리티 적용 시 변경
-        List<AccountFindAllRes> accountFindAllResList = accountRepository.findAllByUsers(users).stream()
+    public List<AccountFindAllRes> accountFindAll(String phoneNumber) {
+        Users users = usersRepository.findByPhoneNumber(phoneNumber);
+
+        // 일반 계좌 조회
+        List<Account> accountList = accountRepository.findAllByUsers(users);
+        List<AccountFindAllRes> accountFindAllResList = accountList.stream()
+                .filter(account -> account.getType() == 1)
                 .map(AccountFindAllRes::new)
-                .toList();
+                .collect(Collectors.toList());
+
+        // 머니박스 계좌 조회 : 파킹통장(2)로 balance를 합침
+        Optional<Account> parkingAccountOptional = accountList.stream()
+                .filter(account -> account.getType() == 2)
+                .findFirst();
+        if (parkingAccountOptional.isPresent()) {
+            Account parkingAccount = parkingAccountOptional.get();
+            Long moneyboxTotalBalance = accountList.stream()
+                    .filter(account -> account.getType() != 1)
+                    .mapToLong(Account::getBalance)
+                    .sum();
+            accountFindAllResList.add(new AccountFindAllRes(parkingAccount, moneyboxTotalBalance));
+        }
+
         return accountFindAllResList;
     }
 
+    @Transactional
+    public MoneyboxSaveRes moneyboxSave(MoneyboxSaveReq moneyboxSaveReq, String phoneNumber) {
+        Users users = usersRepository.findByPhoneNumber(phoneNumber);
+        Products products = productsRepository.findById(moneyboxSaveReq.productsId())
+                .orElseThrow(() -> new ProductsNotFound());
+
+        Account parkingAccount = accountRepository.save(moneyboxSaveReq.toEntity(users, products, 2));
+        Account expenseAccount = accountRepository.save(moneyboxSaveReq.toEntity(users, products, 3));
+        Account savingAccount = accountRepository.save(moneyboxSaveReq.toEntity(users, products, 4));
+
+        return new MoneyboxSaveRes(parkingAccount, expenseAccount, savingAccount);
+    }
+
     @Transactional(readOnly = true)
-    public MoneyboxFindAllRes moneyboxFindAll() {
-        Users users = usersRepository.findById(1L).get();    // TODO : 시큐리티 적용 시 변경
-        List<Account> accountList = accountRepository.findAllByUsers(users);
+    public MoneyboxFindAllRes moneyboxFindAll(String phoneNumber) {
+        Users users = usersRepository.findByPhoneNumber(phoneNumber);
+        List<Account> accountList = accountRepository.findAllByUsersAndTypeNot(users, 1);
+        if (accountList.size() != 3) {
+            throw new MoneyboxNotFound();
+        }
+        return new MoneyboxFindAllRes(accountList.get(0), accountList.get(1), accountList.get(2));
+    }
 
-        Map<Integer, Account> accountMap = accountList.stream()
-                .collect(Collectors.toMap(Account::getType, account -> account));
-        Account parkingAccount = accountMap.get(1);
-        Account expenseAccount = accountMap.get(2);
-        Account savingAccount = accountMap.get(3);
-
-        MoneyboxFindAllRes moneyboxFindAllRes = new MoneyboxFindAllRes(parkingAccount, expenseAccount, savingAccount);
-        return moneyboxFindAllRes;
+    @Transactional(readOnly = true)
+    public MoneyboxFindBySavingRes moneyboxFindBySavingRes(String phoneNumber) {
+        Users users = usersRepository.findByPhoneNumber(phoneNumber);
+        List<Account> account = accountRepository.findAllByUsersAndType(users, 4);
+        if (account.size() != 1) {
+            throw new MoneyboxNotFound();
+        }
+        return new MoneyboxFindBySavingRes(account.get(0));
     }
 }
